Update to Minecraft 26.2